--- a/03-tools-webscraping/notebook-webscraping.ipynb
+++ b/03-tools-webscraping/notebook-webscraping.ipynb
@@ -56,6 +56,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment line below to install\n",
+    "#!pip install pandas_datareader\n",
+    "\n",
+    "import pandas as pd\n",
+    "%matplotlib inline\n",
+    "\n",
+    "pd.core.common.is_list_like = pd.api.types.is_list_like\n",
+    "from pandas_datareader import data as web\n",
+    "from datetime import datetime as dt\n",
+    "\n",
+    "df_google = web.DataReader('GOOGL', data_source='iex', start=dt(2019, 1, 1), end=dt.now()).reset_index()\n",
+    "\n",
+    "df_google.head()\n",
+    "# Volume is the number of shares or contracts traded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# convert string 'date' to datetime format\n",
+    "df_google.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_google['date'] = pd.to_datetime(df_google['date'] \\\n",
+    "                                   ,infer_datetime_format=True) \n",
+    "df_google = df_google.set_index('date')\n",
+    "df_google.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_google['open'].plot(figsize=(12,8),grid=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,36 +160,6 @@
     "#### [Webcrawl Twitter, recusrive URL link fetcher + depth](#sec7)\n",
     "\n",
     "#### [SEO, visualize webite categories as a tree](#sec8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='sec0'></a>\n",
-    "## Pre-Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stretch Jupyter coding blocks to fit screen\n",
-    "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:90% !important; }</style>\")) \n",
-    "# if 100% it would fit the screen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make it run on py2 and py3\n",
-    "from __future__ import division, print_function"
    ]
   },
   {
@@ -491,7 +516,7 @@
     "    'From': 'data-x@gmail.com' \n",
     "}\n",
     "\n",
-    "response = requests.get('http://alex.fo/other/data-x', headers=headers)\n",
+    "response = requests.get('https://alex.fo/other/data-x/', headers=headers)\n",
     "print(response)\n",
     "print(response.headers) # the response will also have some meta informaiton about the content"
    ]
@@ -854,7 +879,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_imdb = pd.read_html('http://www.imdb.com/chart/top',attrs={'class':'chart full-width'})[0]"
+    "df_imdb = pd.read_html('https://www.imdb.com/chart/top',attrs={'class':'chart full-width'})[0]"
    ]
   },
   {
@@ -910,7 +935,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urls = ['http://www.imdb.com'+l.get('href') for l in links]\n",
+    "urls = ['https://www.imdb.com'+l.get('href') for l in links]\n",
     "urls[0]"
    ]
   },
@@ -1830,7 +1855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1844,7 +1869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
